css/style.css
/* ... */
.lt-ie9 .thumb:hover .thumb_overlay:before {
  display: block;
}
.thumb:hover img {
  -moz-transform: scale(1.2);
  -ms-transform: scale(1.2);
  -o-transform: scale(1.2);
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}

/*==================  cbp-so-scroller   ======================*/
.cbp-so-scroller {
  overflow: hidden;
}

/* Initial state (hidden or anything else) */
.cbp-so-init .cbp-so-side {
  opacity: 0;
  -webkit-transition: none;
  -moz-transition: none;
  transition: none;
}

.cbp-so-init .cbp-so-side-left {
  -webkit-transform: translateX(-80px);
  -moz-transform: translateX(-80px);
  transform: translateX(-80px);
}

.cbp-so-init .cbp-so-side-right {
  -webkit-transform: translateX(80px);
  -moz-transform: translateX(80px);
  transform: translateX(80px);
}

/* Animated state */
/* add you final states (transition) or your effects (animations) for each side */
.cbp-so-section.cbp-so-animate .cbp-so-side-left,
.cbp-so-section.cbp-so-animate .cbp-so-side-right {
  -webkit-transition: -webkit-transform .7s, opacity 0.5s;
  -moz-transition: -moz-transform .7s, opacity 0.5s;
  transition: transform .7s, opacity 0.5s;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  transform: translateX(0px);
  opacity: 1;
}

/* For example, add a delay for the right side:*/
.cbp-so-section.cbp-so-animate .cbp-so-side-right {
  -webkit-transition-delay: 0.3s;
  -moz-transition-delay: 0.3s;
  transition-delay: 0.3s;
}

/*========================================================
                     HEADER  Section
=========================================================*/
header {
  background: #242329;
  padding-top: 60px;
  padding-bottom: 150px;
}
header .header-top:before, header .header-top:after {
  display: table;
  content: "";
  line-height: 0;
}
header .header-top:after {
  clear: both;
}
header .header-top .nav {
  float: left;
  padding-top: 40px;
  padding-bottom: 40px;
}
header .header-top .brand {
  float: right;
}
@media (max-width: 767px) {
  header .header-top {
    text-align: center;
  }
  header .header-top .nav, header .header-top .brand {
    float: none;
  }
}
@media (max-width: 767px) {
  header .header-bottom h2 {
    text-shadow: 1px 1px 5px #000;
  }
}
header * + .header-bottom {
  margin-top: 48px;
}

/*========================================================
                     CONTENT  Section
=========================================================*/
main {
  display: block;
  background: #242329;
}

/*========================================================
                     FOOTER  Styles
=========================================================*/
footer {
  padding-top: 90px;
  padding-bottom: 75px;
  background: #0C0C0D;
}
footer .copyright {
  margin-top: 27px;
  line-height: 30px;
}


#about-salsa {
    color: #F0F54B;
    text-transform: uppercase;
    font-weight: 900;
    
}

#about-salsa .about-salsa-info {
    background: #242329;
    padding: 30px;
    text-align:center;
    margin-bottom: 10px;
}

#our-studio{
    color:white;
    text-align:center;
}

#our-studio h2 {
    color: #D91D52;
    text-transform: uppercase;      
}

.post_caption time .day {
  font-size: 28px;
  line-height: 28px;
  display: inline;
}

.post_caption time .month {
  font-size: 28px;
  line-height: 28px;
  display: inline;
  letter-spacing: 1.68px;
  text-transform: uppercase;
}

.post_caption time .level {
    display: block;
    margin-top: 12px;
    font-size: 30px;
}

.post_caption_cnt .description-text {
    font-family: Roboto;
    line-height: 23px;
    font-weight: 700;
}

#faqs h2 {
    text-transform: none;
}

#ashok {
    color:white;
    margin: 20px 0;
    padding:20px 0;
}

.ashok-pic-wrapper {
    text-align:center;
}

.ashok-pic-wrapper img {
    margin-bottom: 20px;
    width: 40%;
}

#instructor-description {
    border-left: 1px solid white;
    border-top: 1px solid white;
    padding-top: 10px;
    text-align: justify;
    
}

@media screen and (min-width: 700px) {
    .ashok-pic-wrapper img {
        width: 80%;
    }
}

#private-corporate ul{
}

#private-corporate ul li {
    margin-top: 10px;
}


.question {
    padding: 20px;
    background: #F0F54B; /*yellow*/
    margin-bottom: 5px;
    color: black;
    font-weight: 700;
    cursor: pointer;
}

.answer {
    background: white;
    color: black;
    padding: 20px 30px;
    display: none;
    transition: display 0.8s;
}

#beginners .row .row {
    margin-top: 10px;
    font-size: 18px;
}

#beginners .description {
    text-align: left;
}

@media (max-width: 767px) {
    #beginners .post {
        max-width: 100%;
    }

    #events .post {
        max-width: 100%;
    }
}

.strip {
    color: #D91D52; /*pink*/
    font-size: 20px;
    font-weight: 700;
    padding: 10px;
}

#events .post_caption_cnt {
    padding: 20px;
}

#events .post_caption_cnt {
    font-weight: normal;
    font-size: 19px;
    line-height: 19px;
}

#events .post_caption_cnt h5 {
    font-weight: bold;
    font-size: 23px;
    line-height: 22px;
    margin-top: 10px;
}

.about-salsa-current {  
    color: white;
    text-transform: none;
    font-weight: normal;
    padding: 10px;
    text-align: justify;
}

.about-salsa-description {
    display:none;
}

.about-salsa-header {
    color: #F0F54B;
}

.about-salsa-info {
    cursor: pointer;
}

#about .inset-1 {
    padding-bottom:20px;
}

#popup {
    display: none;
    position: fixed;
    top: 25vh;
    left: 25vw;
    width: 50vw;
   z-index: 100000;
   background: white;
   color: black;
   padding: 100px;
}


#classes .product {
   height: 650px;
}

.faq {
    margin-top: 0!important;
}

@media (min-width:728px){
    #our-studio img {
        display: block;
        margin-top: 100px;
    }
}

